webssh/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webssh
spec:
  selector:
    app: webssh
  ports:
  - port: 80
    targetPort: 2222
