webssh/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webssh
  annotations:
    cert-manager.io/cluster-issuer: "ca-issuer"
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd,default-oauth2-proxy-redirect@kubernetescrd,default-oauth2-proxy-forward@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: shell.k3s-fch.dev.gnc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webssh
            port:
              number: 80
  tls:
  - hosts:
    - shell.k3s-fch.dev.gnc
    secretName: shell-k3s-fch-dev-gnc
